5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1582_2897.log
== TEST (2019-03-27 21:40:42) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
print(num)
-- OUTPUT:
1234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 21:41:10) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
print(num, 2)
-- OUTPUT:
1234 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 21:41:56) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
print(num, 1)
-- OUTPUT:
1234 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 21:42:11) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
print(num, 11)
-- OUTPUT:
1234 11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 21:42:49) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
print(11)
-- OUTPUT:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 21:43:06) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
print(2*11)
-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 21:43:14) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
print(2*11)
-- EXECUTION TIME:
0.154904
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 21:43:19) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
print(2*11)
-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 21:43:26) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
print(2*11)
-- EXECUTION TIME:
0.205736
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 21:43:56) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
print(num, 11*2)
-- OUTPUT:
1234 22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 21:44:16) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
print(num, 11/2)
-- OUTPUT:
1234 5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 21:44:25) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
print(num, 2)
-- OUTPUT:
1234 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 21:44:31) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
print(num, 2)
-- EXECUTION TIME:
0.198124
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
1234 2
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
444 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 21:47:48) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
print(num, 2)
-- OUTPUT:
1234 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 21:49:07) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
print(input(num, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(num, 2))
TypeError: input expected at most 1 arguments, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 21:49:30) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
print(input(num))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(num))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 21:49:47) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
print(input(num, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(num, 2))
TypeError: input expected at most 1 arguments, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 21:50:02) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
print(input(num, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(num, 7))
TypeError: input expected at most 1 arguments, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 21:50:15) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
print(input(num, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(num, 1))
TypeError: input expected at most 1 arguments, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 22:09:25) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
print(num)x 2
-- ERROR:
File "XXXX", line 7
    print(num)x 2
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 22:09:31) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
print(num)* 2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num)* 2
TypeError: unsupported operand type(s) for *: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 22:10:33) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
dobro=num*2
print(dobro)
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 22:10:42) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
dobro=num*2
print(dobro)
-- EXECUTION TIME:
0.13427
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
